<resources>
    <string name="app_name">BabyTalk</string>
    <string name="configuration">Configuration</string>
    <string name="notification_title">BabyTalk</string>
    <string name="notification_message">Monitoring baby ...</string>
    <string name="ticker_text">Where is this going?</string>
    <string name="broadcast_sound_level_URL">com.example.babytalk.Audiolevel</string>

    <string name="preference_speakerphone_key">speakerPhoneSetting</string>
    <string name="preference_silent_mode_key">silentModeSetting</string>
    <string name="preference_video_call_key">videoCallSetting</string>
    <string name="preference_motion_key">motionDetectionSetting</string>
    <string name="preference_phonenumber_key">phoneNumberSetting</string>
    <string name="preference_pause_key">pauseSetting</string>
    <string name="preference_pause_value_key">pauseValueSetting</string>
    <string name="preference_motion_value_key">motionValueSetting</string>
    <string name="preference_soundlimit_key">soundLimitSetting</string>

</resources>
